--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,7 @@
 	</head>
 
 	<body>
+	<div class="global">
 		<header>
 			<img src='images/logo.png'>
 			
@@ -55,30 +56,40 @@
 				</ul>
 			</nav>
 		</header>
+		</div>
 
 		<main>
-			<section>
-				<article>A</article>
-				<article>B</article>
-				<article>C</article>
-			</section>
-			<section>	
-				<article>D</article>
-				<article>E</article>
-				<article>F</article>
-			</section>	
-			<section>	
-				<article>G</article>
-				<article>H</article>
-				<article>I</article>
-			</section>	
-			<section>	
-				<article>J</article>
-				<article>K</article>
-				<article>L</article>
-			</section>	
+			<div class="global">
+				<section>
+					<article>A</article>
+					<article>B</article>
+					<article>C</article>
+					<article>D</article>
+					<article>E</article>
+				</section>
+			</div>
+
+			<div class="global">
+				<section>	
+					<article>F</article>
+					<article>G</article>
+					<article>H</article>
+					<article>I</article>
+					<article>J</article>
+				</section>
+			</div>
+			<div class="global">
+				<section>	
+					<article>K</article>
+					<article>L</article>
+					<article>M</article>
+					<article>N</article>
+					<article>O</article>
+				</section>
+			</div>
 		</main>
-		
+
+		<div class="global">
 		<footer>
 			<div><i class="fa fa-twitter" aria-hidden="true"></i></div>
 			<div><i class="fa fa-google-plus" aria-hidden="true"></i></div>
@@ -86,6 +97,6 @@
 			<div><i class="fa fa-pinterest-p" aria-hidden="true"></i></div>
 			<div><i class="fa fa-linkedin" aria-hidden="true"></i></div>
 		</footer>
-		
+		</div>
 	</body>
 </html>
