--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
 		<main>
 			<div class="global">
 				<section>
-					<article><img src="img-svg/01-cercle.svg">A</article>
+					<article><img src="img-svg/01-cercle.svg"></article>
 					<article>B</article>
 					<article>C</article>
 					<article>D</article>
